[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
exclude = [
    "^runtests\\.py$",
    "^.gitignore$",
    "^runtests\\.py$",
    "^configuration\\.yaml$",
    "apps/",
    "static/"
]

[project]
name = "chordata"
version = "0.1.0"
authors = [
  { name="James Hickman", email="james@rationalboxes.com" },
]
description = "Next generation Python web server framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "airspeed>=0.5.10",
    "requests>=2.21.0",
    "six>=1.12.0",
    "urllib3>=1.24.1",
    "urlparser>=0.1.2",
    "uwsgi>=2.0",
    "psycopg2>=2.9.9",
    "SQLAlchemy>=2.0.23",
    "munch>=2.5.0",
    "Jinja2>=3.0.3",
    "ldap3>=2.5.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]